--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -5,8 +5,6 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.module }}-${{ matrix.os }}-${{ matrix.bitness }}
-
     strategy:
       fail-fast: false
       matrix:
@@ -14,7 +12,7 @@ jobs:
         os: [ Linux, Windows ]
         bitness: [ 32, 64 ]
 
-    uses: acidicoala/SmokeAPI/.github/workflows/kb-build.yml@master
+    uses: acidicoala/KoalaBox/.github/workflows/build-cmake.yml@master
     with:
       module: ${{ matrix.module }}
       os: ${{ matrix.os }}
